Minor: Improve some code comments and task organization